Fix: se añade z-index a elementos para superponerlos ante particles

--- a/frontend/src/Assets/CSS/Cupon.css
+++ b/frontend/src/Assets/CSS/Cupon.css
@@ -9,10 +9,12 @@
 
 .contenido {
   border: 1px solid #000000;
-  background-color: transparent;
+  background-color: #e4fbff;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
+  position: relative;
+  z-index: 3;
 }
 
 .form {
