--- a/frontend/src/Assets/CSS/QR.css
+++ b/frontend/src/Assets/CSS/QR.css
@@ -49,17 +49,9 @@
     margin-bottom: 20px;
 }
 
-table {
-    width: 800px;
-    border-collapse: collapse;
-    overflow: hidden;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-}
-
 tbody tr:hover {
     background-color: rgba(160, 160, 160, 0.3);
 }
-
 
 tbody td:hover:before {
     content: "";
